testsuite/tests/typecheck/should_fail/T8428.stderr

T8428.hs:10:23: error: [GHC-83865]
    • Expected kind ‘* -> *’, but ‘forall s. ST s’ has kind ‘*’
    • In the first argument of ‘IdentityT’, namely ‘(forall s. ST s)’
      In the type signature: runIdST :: IdentityT (forall s. ST s) a -> a

T8428.hs:10:33: error: [GHC-83865]
    • Expecting one more argument to ‘ST s’
      Expected a type, but ‘ST s’ has kind ‘* -> *’
    • In the first argument of ‘IdentityT’, namely ‘(forall s. ST s)’
      In the type signature: runIdST :: IdentityT (forall s. ST s) a -> a
